python-sqlfuse (0.5.14-1) unstable; urgency=low

  * Add separate inode-writeback background job.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Tue, 12 Apr 2011 21:03:17 +0200

python-sqlfuse (0.5.13-1) unstable; urgency=low

  * Support database retries (deadlocks are unavoidable …)

 -- Matthias Urlichs <smurf@smurf.noris.de>  Mon, 11 Apr 2011 10:53:37 +0200

python-sqlfuse (0.5.12-1) unstable; urgency=low

  * Import error

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sun, 10 Apr 2011 09:31:28 +0200

python-sqlfuse (0.5.11-1) unstable; urgency=low

  * Close inode cache file in the event lister
  * Delegate path lookup to threads

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sun, 10 Apr 2011 09:06:07 +0200

python-sqlfuse (0.5.10-1) unstable; urgency=low

  * Fixed a bad indentation mistake
  * Fixed too-many-open-file error

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sat, 09 Apr 2011 21:34:06 +0200

python-sqlfuse (0.5.9-1) unstable; urgency=low

  * Concurrency problem
  * Deadlock 2
  * attr name

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sat, 09 Apr 2011 20:51:36 +0200

python-sqlfuse (0.5.8-1) unstable; urgency=low

  * Deadlock; remove debugging code
  * Fix renaming of directories

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sat, 09 Apr 2011 09:08:02 +0200

python-sqlfuse (0.5.7-1) unstable; urgency=low

  * Reordered a couple of background DB accesses
    to prevent long-term connections, i.e. deadlock.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Thu, 07 Apr 2011 17:54:08 +0200

python-sqlfuse (0.5.6-1) unstable; urgency=low

  * incoming chmod() didn't preserve the inode type.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Thu, 07 Apr 2011 16:48:02 +0200

python-sqlfuse (0.5.5-1) unstable; urgency=low

  * Cleanup log processing.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Thu, 07 Apr 2011 11:26:29 +0200

python-sqlfuse (0.5.4-1) unstable; urgency=low

  * Fix inode deletion; non-file inodes didn't get killed
